--- a/index.html
+++ b/index.html
@@ -66,73 +66,73 @@
             
             <div class="grid-item" onclick="openModal('rank5')">
                 <span class="rank-badge">#5</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 5">
+                <img src="assets/images/shigatsuu.jpg" alt="Anime 5">
                 <div class="grid-info">
-                    <h3>Golden Time</h3>
+                    <h3>Shigatsu wa Kimi no Uso</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank6')">
                 <span class="rank-badge">#6</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 6">
+                <img src="assets/images/clannad.jpg" alt="Anime 6">
                 <div class="grid-info">
-                    <h3>Horimiya</h3>
+                    <h3>Clannad</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank7')">
                 <span class="rank-badge">#7</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 7">
+                <img src="assets/images/seishunn.jpg" alt="Anime 7">
                 <div class="grid-info">
-                    <h3>Fruits Basket</h3>
+                    <h3>Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank8')">
                 <span class="rank-badge">#8</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 8">
+                <img src="assets/images/ookami.jpg" alt="Anime 8">
                 <div class="grid-info">
-                    <h3>Clannad: After Story</h3>
+                    <h3>Ookami to Koushinryou</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank9')">
                 <span class="rank-badge">#9</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 9">
+                <img src="assets/images/aonohako.jpg" alt="Anime 9">
                 <div class="grid-info">
-                    <h3>Kaichou wa Maid-sama!</h3>
+                    <h3>Ao no Hako</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank10')">
                 <span class="rank-badge">#10</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 10">
+                <img src="assets/images/chunibyo.jpg" alt="Anime 10">
                 <div class="grid-info">
-                    <h3>Kimi ni Todoke</h3>
+                    <h3>Chuunibyou demo Koi ga Shitai!</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank10')">
                 <span class="rank-badge">#11</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 10">
+                <img src="assets/images/gotoubun.jpg" alt="Anime 10">
                 <div class="grid-info">
-                    <h3>Kimi ni Todoke</h3>
+                    <h3>Gotoubun no Hanayome</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank10')">
                 <span class="rank-badge">#12</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 10">
+                <img src="assets/images/kaminomi.jpg" alt="Anime 10">
                 <div class="grid-info">
-                    <h3>Kimi ni Todoke</h3>
+                    <h3>Kami Nomi zo Shiru Sekai</h3>
                 </div>
             </div>
 
             <div class="grid-item" onclick="openModal('rank10')">
                 <span class="rank-badge">#13</span>
-                <img src="assets/images/anime1.jpg" alt="Anime 10">
+                <img src="assets/images/datealive.jpg" alt="Anime 10">
                 <div class="grid-info">
-                    <h3>Kimi ni Todoke</h3>
+                    <h3>Date A Live</h3>
                 </div>
             </div>
 
